force-app/main/default/objects/License_Basis_Item_Master_Link__c/fields/Item_Master_Product__c.field-meta.xml
<CustomField>
    <fullName>Item_Master_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Master Product</label>
    <referenceTo>Item_Master_Product__c</referenceTo>
    <relationshipLabel>License Basis Item Master Links</relationshipLabel>
    <relationshipName>License_Basis_Item_Master_Links</relationshipName>
    <type>Lookup</type>
</CustomField>