force-app/main/default/objects/License_Basis_Item_Master_Link__c/fields/License_Basis__c.field-meta.xml
<CustomField>
    <fullName>License_Basis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License Basis</label>
    <referenceTo>License_Basis__c</referenceTo>
    <relationshipLabel>License Basis Item Master Links</relationshipLabel>
    <relationshipName>License_Basis_Item_Master_Links</relationshipName>
    <type>Lookup</type>
</CustomField>