force-app/main/default/objects/License_Basis_Item_Master_Link__c/fields/Product_Ownership_Detail__c.field-meta.xml
<CustomField>
    <fullName>Product_Ownership_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Ownership Detail</label>
    <referenceTo>Product_Ownership_Detail__c</referenceTo>
    <relationshipLabel>License Basis Item Master Links</relationshipLabel>
    <relationshipName>License_Basis_Item_Master_Links</relationshipName>
    <type>Lookup</type>
</CustomField>